--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,10 @@ version: '3.4'
 services:
   rabbitmq:
     image: rabbitmq:3-management-alpine
-    hostname: rabbitmq-container
     container_name: 'rabbitmq'
     ports:
         - 5672:5672     #amqp
         - 15672:15672   #prometheus
-    volumes:
-        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
     environment:
         RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-guest}
         RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-guest}
@@ -22,13 +18,13 @@ services:
     build:
       context: .
       dockerfile: ProducerApi/Dockerfile
-    depends_on:
-      - rabbitmq
     environment:
-      - RMQ_USER=${RABBITMQ_DEFAULT_USER:-admin}
-      - RMQ_PASS=${RABBITMQ_DEFAULT_PASS:-admin}
+      - RMQ_USER=${RABBITMQ_DEFAULT_USER:-guest}
+      - RMQ_PASS=${RABBITMQ_DEFAULT_PASS:-guest}
       - RMQ_HOST=${RABBITMQ_DEFAULT_HOST:-rabbitmq}
       - RMQ_PORT=${RABBITMQ_DEFAULT_PORT:-5672}
+    depends_on:
+      - rabbitmq
     networks:
         - rabbitmq_go_net
 
@@ -37,13 +33,13 @@ services:
     build:
       context: .
       dockerfile: ConsumerApp/Dockerfile
-    depends_on:
-      - rabbitmq
     environment:
-      - RMQ_USER=${RABBITMQ_DEFAULT_USER:-admin}
-      - RMQ_PASS=${RABBITMQ_DEFAULT_PASS:-admin}
+      - RMQ_USER=${RABBITMQ_DEFAULT_USER:-guest}
+      - RMQ_PASS=${RABBITMQ_DEFAULT_PASS:-guest}
       - RMQ_HOST=${RABBITMQ_DEFAULT_HOST:-rabbitmq}
       - RMQ_PORT=${RABBITMQ_DEFAULT_PORT:-5672}
+    depends_on:
+      - rabbitmq
     networks:
         - rabbitmq_go_net
 
